# upwork

./: CHANGELOG.md  MANIFEST.in  README.md  build_and_upload.sh  pyproject.toml  release.sh
cli_standard_kit/: __init__.py
scraper-classicist-org/: MANIFEST.in  README.md  main.py  pyproject.toml
scraper-classicist-org/cli_standard_kit/: cli_core.py
scraper-classicist-org/outputs/: detailed_members_20260122_083943.csv  detailed_members_20260122_084918.csv  detailed_members_20260122_084956.csv  detailed_members_20260122_085150.csv  detailed_members_20260122_085307.csv  scraped_data_20260121_214747.json  scraped_data_20260121_215234.csv
scraper-classicist-org/scraper/: __init__.py  commands.py  exporters.py  parsers.py  scraper_core.py
