[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-classicist-org"
version = "0.1.0"
description = "Web scraper for classicist.org with standardized CLI interface"
readme = "README.md"
# License specified in classifiers for compatibility
authors = [{name = "Cenk Kabahasanoglu", email = "me@c3nk.com"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
]
keywords = ["scraper", "web-scraping", "classicist", "cli", "data-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/c3nk/upwork"
Documentation = "https://github.com/c3nk/upwork#readme"
Repository = "https://github.com/c3nk/upwork.git"
Issues = "https://github.com/c3nk/upwork/issues"

[tool.setuptools]
packages = ["cli_standard_kit", "scraper"]

[tool.setuptools.package-data]
cli_standard_kit = ["py.typed"]
scraper = ["*.py"]

[project.scripts]
scraper-classicist = "main:main"